--- a/build.gradle
+++ b/build.gradle
@@ -30,16 +30,15 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test:2.6.3'
 
     // Metrics
-    implementation 'org.springframework.boot:spring-boot-starter-actuator'
+    implementation 'org.springframework.boot:spring-boot-starter-actuator:2.6.3'
     implementation 'io.micrometer:micrometer-core:1.8.2'
     implementation 'io.micrometer:micrometer-registry-cloudwatch2:1.8.2'
-
 
     // IP Lookup Tree
     implementation 'com.github.x25:ip-subnet-tree:1.0.3'
 
     // Github Repo Management
-    implementation 'org.eclipse.jgit:org.eclipse.jgit:5.4.2.201908231537-r'
+    implementation 'org.eclipse.jgit:org.eclipse.jgit:6.0.0.202111291000-r'
 
 }
 
