make more ECS friendly, some logging

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,7 +8,7 @@ logging:
     org.springframework.web: INFO
 
 app:
-  repo_dir: '/var/lib/repo'
+  repo_dir: '/var/repo'
 
 management:
   endpoints:
